Finish static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#home</h1>
-<p>what up yo</p>
+<% provide(:title, 'Home') %>
+<h1>Sample App</h1>
+<p>
+	Selam ben 
+	<a href="https://www.facebook.com/sonsarisin88"> Batuhan Tumay</a>,
+	bu da ilk sample application'ım.
+	 </p>
