--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Help') %>
+<h1>Help</h1>
+<p>Selam, ben  
+	<a href="http://www.facebook.com/sonsarisin88"> Batuhan Tumay</a>, 
+	burası da ilk application'ımın help sayfası.
+</p>
