Add a full_title helper

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,6 @@
-<% provide(:title, 'Home') %>
 <h1>Sample App</h1>
 <p>
 	Selam ben 
 	<a href="https://www.facebook.com/sonsarisin88"> Batuhan Tumay</a>,
-	bu da ilk sample application'ım.
+	bu da ilk sample application'ım. ayrıca berk <a href="http://nedemek.com.tr/gay-ne-demek-gay-nedir/gay_kiss_0/"> eşcinsel</a>. 
 	 </p>
